# checkmail

./: .gitignore  README.md  checkmail.py  pyproject.toml
