[tool.poetry]
name = "checkmail"
version = "0.1.0"
description = "Verify if account exists at GMail"
authors = ["Mayk <7395296+yok4i@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
cchardet = "^2.1.7"
aiodns = "^3.0.0"
fake-useragent = "^0.1.11"
urllib3 = "^1.26.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
